Дополнена реализация swagger
